grammars/hujson/test/corpus/arrays.txt
==================
Empty array
==================

[]

---

(document
  (array))

==================
Single element
==================

[1]

---

(document
  (array
    (number)))

==================
Multiple elements
==================

[1, 2, 3]

---

(document
  (array
    (number)
    (number)
    (number)))

==================
Nested arrays
==================

[[1, 2], [3, 4]]

---

(document
  (array
    (array
      (number)
      (number))
    (array
      (number)
      (number))))

==================
Mixed value types
==================

["hello", 42, true, false, null, [1], {"a": 1}]

---

(document
  (array
    (string (string_content))
    (number)
    (true)
    (false)
    (null)
    (array
      (number))
    (object
      (pair
        key: (string (string_content))
        value: (number)))))
