grammars/hujson/test/corpus/comments.txt
==================
Line comment at end of line
==================

{"a": 1} // end of line comment

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (number)))
  (comment))

==================
Line comment on its own line
==================

// standalone comment
{"a": 1}

---

(document
  (comment)
  (object
    (pair
      key: (string (string_content))
      value: (number))))

==================
Block comment inline
==================

{"a": /* inline */ 1}

---

(document
  (object
    (pair
      key: (string (string_content))
      (comment)
      value: (number))))

==================
Block comment spanning multiple lines
==================

{
  /*
   * Multi-line
   * block comment
   */
  "a": 1
}

---

(document
  (object
    (comment)
    (pair
      key: (string (string_content))
      value: (number))))

==================
Comment inside object between pairs
==================

{
  "a": 1,
  // between pairs
  "b": 2
}

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (number))
    (comment)
    (pair
      key: (string (string_content))
      value: (number))))

==================
Comment inside array between elements
==================

[1, /* between */ 2, 3]

---

(document
  (array
    (number)
    (comment)
    (number)
    (number)))

==================
Comment before root value
==================

// header comment
[1, 2]

---

(document
  (comment)
  (array
    (number)
    (number)))

==================
Comment after root value
==================

[1, 2]
// footer comment

---

(document
  (array
    (number)
    (number))
  (comment))

==================
Empty block comment
==================

{/* */}

---

(document
  (object
    (comment)))
