grammars/hujson/test/corpus/objects.txt
==================
Empty object
==================

{}

---

(document
  (object))

==================
Single pair
==================

{"key": "value"}

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (string (string_content)))))

==================
Multiple pairs
==================

{"a": 1, "b": 2, "c": 3}

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (number))
    (pair
      key: (string (string_content))
      value: (number))
    (pair
      key: (string (string_content))
      value: (number))))

==================
Nested objects
==================

{"outer": {"inner": {"deep": true}}}

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (object
        (pair
          key: (string (string_content))
          value: (object
            (pair
              key: (string (string_content))
              value: (true))))))))

==================
Object with all value types
==================

{
  "string": "hello",
  "number": 42,
  "float": 3.14,
  "bool_true": true,
  "bool_false": false,
  "nullable": null,
  "array": [1, 2],
  "object": {"nested": true}
}

---

(document
  (object
    (pair
      key: (string (string_content))
      value: (string (string_content)))
    (pair
      key: (string (string_content))
      value: (number))
    (pair
      key: (string (string_content))
      value: (number))
    (pair
      key: (string (string_content))
      value: (true))
    (pair
      key: (string (string_content))
      value: (false))
    (pair
      key: (string (string_content))
      value: (null))
    (pair
      key: (string (string_content))
      value: (array
        (number)
        (number)))
    (pair
      key: (string (string_content))
      value: (object
        (pair
          key: (string (string_content))
          value: (true))))))
